# gnokii

./: .cvsignore  .gitignore  BUGS  COPYING  COPYRIGHT  CREDITS  ChangeLog  INSTALL  MAINTAINERS  MANIFEST  Makefile  Makefile.am  Makefile.global.in  README  README-3810  README-6110  README-WIN32  TODO  TODO-6110  TODO-gnokiid  VERSION  acconfig.h  at-emulator.c  at-emulator.h  autogen.sh  cfgreader.c  configure  configure.ac  configure.in  crc24table.h  device.h  fbus-3810.c  fbus-3810.h  fbus-6110-auth.c  fbus-6110-auth.h  fbus-6110-ringtones.c  fbus-6110-ringtones.h  fbus-6110.c  fbus-6110.h  gettext-howto  (+36 more)
Docs/: API-Changes  Bugs  CREDITS  ChangeLog  CodingStyle  DataCalls-QuickStart  FAQ  KNOWN_BUGS  Makefile  Makefile.am  README  README-2110  README-3810  README-6110  README-6510  README-7110  README-DKU2  README-MacOSX  README-PCSC  README-Symbian  README-WIN32  README-WINDOWS  README-dancall  README-ericsson  README-siemens  README.libsms  gettext-howto  gnokii-6210-7110-IrDA  gnokii-IrDA-Linux  gnokii-hackers-howto  gnokii-ir-howto  gnokii.xpm  gnokiiop.xpm  logos.txt  packaging-howto  pacman.xpm  ringtones.txt  sample.gnokiirc  star.imelody  test.vcs  (+1 more)
Docs/man/: Makefile.am  gnokii.1  gnokiid.8  mgnokiidev.8  sendsms.1  xgnokii.1x
Docs/protocol/: 6110.txt  7110.txt  Makefile.am  dancall.txt  gnokiid-at.txt  nk2110.txt  nk3110.txt  nk6110.txt  nk6160.txt  nk6185.txt  nk640.txt  nk6510.txt  nk7110.txt  nokia.txt
Docs/sample/: 45-nokiadku2.rules  Makefile.am  gnokiirc  magic  pin  sample.gnokiirc
Windows/: Makefile.am  gen_gnokii_h.bat  gen_gnokii_h.ps1  gnokiirc
Windows/MSVC2010Express/: README  config.h  gnokii.sln
Windows/MSVC6/: config.h  libgnokii.dsp
Windows/MSVC8/: config.h  gnokii.sln  gnokii.vcproj
Windows/MSVS2005/: config.h  gnokii.vcproj  libgnokii.vcproj
Windows/MSVS2008/: config.h  gnokii.sln  gnokii.vcproj  libgnokii.vcproj
Windows/MSVS2010/: config.h  gnokii.sln  gnokii.vcproj  libgnokii.vcproj
Windows/mingw-cross/: mingw-cross.sh
common/: .cvsignore  Changelog  Makefile  Makefile.am  cfgreader.c  compat.c  datapump.c  device.c  fbus-3810.c  fbus-6110-auth.c  fbus-6110-ringtones.c  fbus-6110.c  fbus-generic.c  fbus-phonet.c  gnokii.pc.in  gsm-api.c  gsm-auth.c  gsm-bitmaps.c  gsm-call.c  gsm-common.c  gsm-encoding.c  gsm-error.c  gsm-filetypes.c  gsm-mms.c  gsm-networks.c  gsm-ringtones.c  gsm-sms.c  gsm-statemachine.c  ldif.c  libfunctions.c  localcharset.c  map.c  mbus-2110.c  mbus-6160.c  mbus-640.c  misc.c  nokia-decoding.c  phone-7110.c  phone-generic.c  phone-nokia.c  (+15 more)
common/data/: .cvsignore  Makefile  Makefile.am  at-emulator.c  datapump.c  rlp-common.c  rlp-crc24.c  virtmodem.c
common/devices/: .cvsignore  Makefile  Makefile.am  bluetooth.c  dku2libusb.c  irda.c  osxbluetooth.c  osxbluetooth.m  socketphonet.c  tcp.c  tekram.c  unixbluetooth.c  unixirda.c  unixserial.c  winbluetooth.c  winirda.c  winserial.c
common/links/: .cvsignore  Makefile  Makefile.am  atbus.c  cbus.c  fbus-3110.c  fbus-generic.c  fbus-phonet.c  fbus.c  gnbus.c  m2bus.c  utils.c
common/phones/: Makefile  Makefile.am  atbosch.c  ateric.c  atgen.c  athuawei.c  atlg.c  atmot.c  atnok.c  atsag.c  atsam.c  atsie.c  atsoer.c  dc2711.c  fake.c  generic.c  gnapplet.c  pcsc.c  (+10 more)
gnokii/: .cvsignore  ChangeLog  Makefile  Makefile.am  gnokii-app.h  gnokii-calendar.c  gnokii-dial.c  gnokii-file.c  gnokii-logo.c  gnokii-mms.c  gnokii-monitor.c  gnokii-other.c  gnokii-phonebook.c  gnokii-profile.c  gnokii-ringtone.c  gnokii-security.c  gnokii-settings.c  gnokii-sms.c  gnokii-todo.c  gnokii-utils.c  gnokii-wap.c  gnokii.c
include/: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  at-emulator.h  cfgreader.h  compat.h  config.h.in  config.h.in.in  datapump.h  device.h  fbus-3810.h  fbus-6110-auth.h  fbus-6110-ringtones.h  fbus-6110.h  fbus-generic.h  fbus-phonet.h  gnokii-internal.h  gnokii.h  gnokii.h.in  gsm-filetypes.h  linuxirda.h  map.h  mbus-2110.h  mbus-6160.h  mbus-640.h  misc.h  nokia-decoding.h  phone-7110.h  phone-generic.h  phone-nk7110.h  phone-nokia.h  pkt.h  rlp-common.h  rlp-crc24.h  sms-nokia.h  sms.h  tekram.h  unixirda.h  (+2 more)
patches/: Makefile.am  freebsd-ltmain_sh.patch  kernel_2.4.22_dku2.patch  kernel_2.6.9_dku2.patch
smsd/: .cvsignore  ChangeLog  Makefile  Makefile.am  README  README.MySQL  README.Tru64  action  db.c  db.h  file.c  lowlevel.c  lowlevel.h  mysql.c  pq.c  sms.tables.mysql.sql  sms.tables.pq.sql  sms.tables.sql  sms.tables.sqlite.sql  smsd.c  smsd.h  sqlite.c  utils.c  utils.h
testsuite/: .gitignore  .gnokiirc  Makefile.am  dump-vcard.c  out.0.identify  out.00.identify  out.01.sms  out.01.writephonebook  out.02.concatsms  out.04.writephonebook  out.05.writephonebook  out.08.send161sms  out.1.sms  out.10.oplogo  out.11.ringtone  out.12.picture  out.13.emspicture  out.14.oplogo-xpm  out.15.emspicture2  out.16.imelody  out.17.picture2  out.18.emsanimation  out.19.emspicture3  out.2.concatsms  out.26.cimelody  out.27.cimelody2  out.28.cemsanimation  out.29.sendsms  out.3.ucs2sms  out.30.emptysms  out.33.send140sms8bit  out.34.send141sms8bit  out.40.getsms  out.41.getsms  out.42.getsms  out.43.getsms  out.8.send161sms  test.00.identify  test.01.writephonebook  test.02.concatsms  (+30 more)
utils/: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  gnokii-configure  gnokii-configure.glade  mgnokiidev.c  sendsms
win32/: ChangeLog  Makefile  Makefile.am  fcopy.bat  gen_gnokii_h.bat  getopt.c  gnokiirc  winserial.c
xgnokii/: .cvsignore  CHANGES  ChangeLog  Makefile  Makefile.am  README.vcard  VERSION  xgnokii.c  xgnokii.desktop  xgnokii.desktop.in  xgnokii.h  xgnokii.mak  xgnokii.pc.in  xgnokii_calendar.c  xgnokii_calendar.h  xgnokii_cfg.c  xgnokii_cfg.h  xgnokii_common.c  xgnokii_common.h  xgnokii_contacts.c  xgnokii_contacts.h  xgnokii_data.c  xgnokii_data.h  xgnokii_dtmf.c  xgnokii_dtmf.h  xgnokii_logos.c  xgnokii_logos.h  xgnokii_lowlevel.c  xgnokii_lowlevel.h  xgnokii_netmon.c  xgnokii_netmon.h  xgnokii_sms.c  xgnokii_sms.h  xgnokii_speed.c  xgnokii_speed.h  xgnokii_xkeyb.c  xgnokii_xkeyb.h  xgnokii_xring.c  xgnokii_xring.h
(+342 files in other folders)
